[package]
name = "bcm-host-sys"
version = "0.1.0"
authors = ["takayuki <takayuki@idein.jp>"]

[lib]
name = "bcm_host_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.36.0"
pkg-config = "0.3.9"
log = "0.4.1"
env_logger = "0.4.3"

[dependencies]

[dev-dependencies]
log = "0.4.1"
env_logger = "0.4.3"
